New classes created

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "collaborative",
     "home leaving assistant"
   ],
-  "author": "Muharrem Tozan",
+  "author": "Muharrem Tozan <muharremtozan@hotmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/MuharremTozan/Comigo/issues"
